--- a/Host/Host.csproj
+++ b/Host/Host.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CancelOrderService.cs" />
+    <Compile Include="custom\CustomWcfManager.cs" />
+    <Compile Include="custom\CustomWcfService.cs" />
+    <Compile Include="custom\ICustomWcfService.cs" />
     <Compile Include="EndpointConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
