--- a/Host/App.config
+++ b/Host/App.config
@@ -50,4 +50,12 @@
       </service>
     </services>
   </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.5.0" newVersion="4.6.5.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
